// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown tests should match snapshot 1`] = `
<DocumentFragment>
  .emotion-5 {
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 600;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.0125em;
  visibility: visible;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-1 svg {
  margin-left: 0.125rem;
}

.emotion-0 {
  height: 1rem;
  width: 1rem;
  min-height: 1rem;
  min-width: 1rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: unset;
  -webkit-box-align: unset;
  -ms-flex-align: unset;
  align-items: unset;
  -webkit-box-pack: unset;
  -ms-flex-pack: unset;
  -webkit-justify-content: unset;
  justify-content: unset;
  visibility: hidden;
  background: #FFFFFF;
  border: 1px solid #DDDDDD;
  border-radius: 4px;
  box-shadow: 0rem 0rem 1rem 0rem rgba(0,0,0,0.10);
  cursor: pointer;
  outline: none;
  margin-top: 0.25rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  min-width: inherit;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  position: absolute;
  z-index: 999;
}

.emotion-4 >*:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-3 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 600;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.0125em;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  color: #FFFFFF;
  background: #2953B2;
  padding: 0.5rem 0.75rem;
  height: 2.25rem;
}

.emotion-3:hover {
  color: #FFFFFF;
  background: #20408C;
}

.emotion-3:active {
  color: #FFFFFF;
  background: #172F66;
}

.emotion-3:disabled {
  background: #E6E6E6;
  color: #747474;
}

.emotion-3:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #BBCBF0;
}

<div
    class="emotion-5"
  >
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
    >
      <label
        for="downshift-3-toggle-button"
        id="downshift-3-label"
      >
        Species
      </label>
    </span>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-3-label downshift-3-toggle-button"
      class="emotion-3"
      id="downshift-3-toggle-button"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-1"
        >
          <svg
            class="emotion-0"
            fill="currentColor"
            height="1rem"
            viewBox="0 0 256 256"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="16rem"
              width="16rem"
            />
            <polyline
              fill="none"
              points="208 96 128 176 48 96"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="18"
            />
          </svg>
          Arabica
        </div>
      </div>
    </button>
    <div
      aria-labelledby="downshift-3-label"
      class="emotion-4"
      id="downshift-3-menu"
      role="listbox"
      tabindex="-1"
    />
  </div>
  .emotion-5 {
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 600;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.0125em;
  visibility: visible;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-1 svg {
  margin-left: 0.125rem;
}

.emotion-0 {
  height: 1rem;
  width: 1rem;
  min-height: 1rem;
  min-width: 1rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: unset;
  -webkit-box-align: unset;
  -ms-flex-align: unset;
  align-items: unset;
  -webkit-box-pack: unset;
  -ms-flex-pack: unset;
  -webkit-justify-content: unset;
  justify-content: unset;
  visibility: hidden;
  background: #FFFFFF;
  border: 1px solid #DDDDDD;
  border-radius: 4px;
  box-shadow: 0rem 0rem 1rem 0rem rgba(0,0,0,0.10);
  cursor: pointer;
  outline: none;
  margin-top: 0.25rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  min-width: inherit;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  position: absolute;
  z-index: 999;
}

.emotion-4 >*:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-3 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 600;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.0125em;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  color: #20408C;
  background: #DDE5F7;
  padding: 0.5rem 0.75rem;
  height: 2.25rem;
}

.emotion-3:hover {
  color: #20408C;
  background: #BBCBF0;
}

.emotion-3:active {
  color: #20408C;
  background: #96B2F2;
}

.emotion-3:disabled {
  background: #E6E6E6;
  color: #747474;
}

.emotion-3:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #BBCBF0;
}

<div
    class="emotion-5"
  >
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
    >
      <label
        for="downshift-4-toggle-button"
        id="downshift-4-label"
      >
        Brew Methods
      </label>
    </span>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-4-label downshift-4-toggle-button"
      class="emotion-3"
      id="downshift-4-toggle-button"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-1"
        >
          <svg
            class="emotion-0"
            fill="currentColor"
            height="1rem"
            viewBox="0 0 256 256"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="16rem"
              width="16rem"
            />
            <polyline
              fill="none"
              points="208 96 128 176 48 96"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="18"
            />
          </svg>
          French Press
        </div>
      </div>
    </button>
    <div
      aria-labelledby="downshift-4-label"
      class="emotion-4"
      id="downshift-4-menu"
      role="listbox"
      tabindex="-1"
    />
  </div>
  .emotion-5 {
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 600;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.0125em;
  visibility: visible;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-1 svg {
  margin-left: 0.125rem;
}

.emotion-0 {
  height: 1rem;
  width: 1rem;
  min-height: 1rem;
  min-width: 1rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: unset;
  -webkit-box-align: unset;
  -ms-flex-align: unset;
  align-items: unset;
  -webkit-box-pack: unset;
  -ms-flex-pack: unset;
  -webkit-justify-content: unset;
  justify-content: unset;
  visibility: hidden;
  background: #FFFFFF;
  border: 1px solid #DDDDDD;
  border-radius: 4px;
  box-shadow: 0rem 0rem 1rem 0rem rgba(0,0,0,0.10);
  cursor: pointer;
  outline: none;
  margin-top: 0.25rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  min-width: inherit;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  position: absolute;
  z-index: 999;
}

.emotion-4 >*:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-3 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 600;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.0125em;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  color: #2953B2;
  background: transparent;
  padding: 0.5rem 0.75rem;
  height: 2.25rem;
}

.emotion-3:hover {
  color: #2953B2;
  background: #F1F4FC;
}

.emotion-3:active {
  color: #2953B2;
  background: #DDE5F7;
}

.emotion-3:disabled {
  background: transparent;
  color: #747474;
}

.emotion-3:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #BBCBF0;
}

<div
    class="emotion-5"
  >
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
    >
      <label
        for="downshift-5-toggle-button"
        id="downshift-5-label"
      >
        Recipes
      </label>
    </span>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-5-label downshift-5-toggle-button"
      class="emotion-3"
      id="downshift-5-toggle-button"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-1"
        >
          <svg
            class="emotion-0"
            fill="currentColor"
            height="1rem"
            viewBox="0 0 256 256"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="16rem"
              width="16rem"
            />
            <polyline
              fill="none"
              points="208 96 128 176 48 96"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="18"
            />
          </svg>
          Latte
        </div>
      </div>
    </button>
    <div
      aria-labelledby="downshift-5-label"
      class="emotion-4"
      id="downshift-5-menu"
      role="listbox"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Dropdown tests should render a Dropdown with a list of string and other with a list of object 1`] = `
<DocumentFragment>
  .emotion-5 {
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 600;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.0125em;
  visibility: visible;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-1 svg {
  margin-left: 0.125rem;
}

.emotion-0 {
  height: 1rem;
  width: 1rem;
  min-height: 1rem;
  min-width: 1rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: unset;
  -webkit-box-align: unset;
  -ms-flex-align: unset;
  align-items: unset;
  -webkit-box-pack: unset;
  -ms-flex-pack: unset;
  -webkit-justify-content: unset;
  justify-content: unset;
  visibility: hidden;
  background: #FFFFFF;
  border: 1px solid #DDDDDD;
  border-radius: 4px;
  box-shadow: 0rem 0rem 1rem 0rem rgba(0,0,0,0.10);
  cursor: pointer;
  outline: none;
  margin-top: 0.25rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  min-width: inherit;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  position: absolute;
  z-index: 999;
}

.emotion-4 >*:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-3 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 600;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.0125em;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  color: #FFFFFF;
  background: #2953B2;
  padding: 0.5rem 0.75rem;
  height: 2.25rem;
}

.emotion-3:hover {
  color: #FFFFFF;
  background: #20408C;
}

.emotion-3:active {
  color: #FFFFFF;
  background: #172F66;
}

.emotion-3:disabled {
  background: #E6E6E6;
  color: #747474;
}

.emotion-3:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #BBCBF0;
}

<div
    class="emotion-5"
  >
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
    >
      <label
        for="downshift-1-toggle-button"
        id="downshift-1-label"
      >
        Date
      </label>
    </span>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-1-label downshift-1-toggle-button"
      class="emotion-3"
      id="downshift-1-toggle-button"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-1"
        >
          <svg
            class="emotion-0"
            fill="currentColor"
            height="1rem"
            viewBox="0 0 256 256"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="16rem"
              width="16rem"
            />
            <polyline
              fill="none"
              points="208 96 128 176 48 96"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="18"
            />
          </svg>
          7 days ago
        </div>
      </div>
    </button>
    <div
      aria-labelledby="downshift-1-label"
      class="emotion-4"
      id="downshift-1-menu"
      role="listbox"
      tabindex="-1"
    />
  </div>
  .emotion-5 {
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 600;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.0125em;
  visibility: visible;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-1 svg {
  margin-left: 0.125rem;
}

.emotion-0 {
  height: 1rem;
  width: 1rem;
  min-height: 1rem;
  min-width: 1rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: unset;
  -webkit-box-align: unset;
  -ms-flex-align: unset;
  align-items: unset;
  -webkit-box-pack: unset;
  -ms-flex-pack: unset;
  -webkit-justify-content: unset;
  justify-content: unset;
  visibility: hidden;
  background: #FFFFFF;
  border: 1px solid #DDDDDD;
  border-radius: 4px;
  box-shadow: 0rem 0rem 1rem 0rem rgba(0,0,0,0.10);
  cursor: pointer;
  outline: none;
  margin-top: 0.25rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  min-width: inherit;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  position: absolute;
  z-index: 999;
}

.emotion-4 >*:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-3 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 600;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.0125em;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  color: #FFFFFF;
  background: #2953B2;
  padding: 0.5rem 0.75rem;
  height: 2.25rem;
}

.emotion-3:hover {
  color: #FFFFFF;
  background: #20408C;
}

.emotion-3:active {
  color: #FFFFFF;
  background: #172F66;
}

.emotion-3:disabled {
  background: #E6E6E6;
  color: #747474;
}

.emotion-3:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #BBCBF0;
}

<div
    class="emotion-5"
  >
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
    >
      <label
        for="downshift-2-toggle-button"
        id="downshift-2-label"
      >
        Date
      </label>
    </span>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-2-label downshift-2-toggle-button"
      class="emotion-3"
      id="downshift-2-toggle-button"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-1"
        >
          <svg
            class="emotion-0"
            fill="currentColor"
            height="1rem"
            viewBox="0 0 256 256"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="16rem"
              width="16rem"
            />
            <polyline
              fill="none"
              points="208 96 128 176 48 96"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="18"
            />
          </svg>
          7 days ago
        </div>
      </div>
    </button>
    <div
      aria-labelledby="downshift-2-label"
      class="emotion-4"
      id="downshift-2-menu"
      role="listbox"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;
